newclay/test/Compiler/Propagation/Fail/RuntimeGlobalStaticReference/main.clay
var x = 2;

#foo() = x;

main() = #foo();
